--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
+    "@tanstack/react-query": "^4.29.25",
     "add": "^2.0.6",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
